SF Primes/src/objects/Project__c.object
<CustomObject>
    <description>Project encompasses discovery workbook, checklist, subprojects, sites, project logs and additional details.</description>
    <fields>
        <fullName>Business_Unit_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Unit Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMF_Numbers__c</fullName>
        <label>CMF Number(s)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMF__c</fullName>
        <label>CMF</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Overview__c</fullName>
        <label>Project Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Region__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBURY ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-ADMINISTRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA-EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA-WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - ADMINISTRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-CENTRAL-FLORENCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-SOUTHWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-WEST-LAPALMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-WEST-PORTLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL-ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL-CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL-SOUTHEAST</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Open_SubProjects__c</fullName>
        <label>Total Open SubProjects</label>
        <summaryFilterItems>
            <field>SubProject__c.SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>SubProject__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_SubProjects__c</fullName>
        <label>Total SubProjects</label>
        <summaryForeignKey>SubProject__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project (Pilot)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Region__c</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Project_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>Project_Region__c</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Project_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Alliance</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>Project_Region__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Region__c</field>
            <operation>startsWith</operation>
            <value>ALLIANCE</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Alliance</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canada</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>Project_Region__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Region__c</field>
            <operation>startsWith</operation>
            <value>CANADA</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Canada</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Enterprise</fullName>
        <booleanFilter>(1 or 2 or 3 or 4) and 5</booleanFilter>
        <columns>Project_Region__c</columns>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Region__c</field>
            <operation>equals</operation>
            <value>ASBURY ADMIN</value>
        </filters>
        <filters>
            <field>Project_Region__c</field>
            <operation>startsWith</operation>
            <value>AUTONATION</value>
        </filters>
        <filters>
            <field>Project_Region__c</field>
            <operation>startsWith</operation>
            <value>ENTERPRISE</value>
        </filters>
        <filters>
            <field>Project_Region__c</field>
            <operation>startsWith</operation>
            <value>SONIC</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Enterprise</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Major_Central</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>Project_Region__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Region__c</field>
            <operation>startsWith</operation>
            <value>MAJOR CENTRAL</value>
        </filters>
        <filters>
            <field>Project_Region__c</field>
            <operation>startsWith</operation>
            <value>MOJOR-CENTRAL</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Major Central</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Major_Northeast</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>Project_Region__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Region__c</field>
            <operation>equals</operation>
            <value>MAJOR-NORTHEAST</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Major Northeast</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Major_Southeast</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>Project_Region__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Region__c</field>
            <operation>equals</operation>
            <value>MAJOR-SOUTHEAST</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Major Southeast</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Major_West_LaPalma</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Region__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Region__c</field>
            <operation>equals</operation>
            <value>MAJOR-WEST-LAPALMA,MAJOR-WEST-PORTLAND</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Major West</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>National</fullName>
        <columns>NAME</columns>
        <columns>Project_Region__c</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>National</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PFW</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Region__c</field>
            <operation>contains</operation>
            <value>PFW</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Heavy Equipment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Truck</fullName>
        <columns>NAME</columns>
        <columns>Project_Region__c</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Overview__c</columns>
        <columns>Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Truck</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>